<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:screenOrientation="portrait"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:text="@string/sTituloTabela"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/TabLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="?attr/colorControlHighlight"
                android:padding="2dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/background_light">

                    <TextView
                        android:id="@+id/lbCDI"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sCDI"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        tools:text="@string/sCDI" />

                    <EditText
                        android:id="@+id/txtCDI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/holo_red_dark" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/background_light">

                    <TextView
                        android:id="@+id/lbIPCA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sIPCA"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        tools:text="@string/sIPCA" />

                    <EditText
                        android:id="@+id/txtIPCA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/holo_red_dark" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/background_light">

                    <TextView
                        android:id="@+id/lbIGPM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sIGPM"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtIGPM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="true"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/holo_red_dark" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/background_light">

                    <TextView
                        android:id="@+id/lbSelic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sSelic"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtSelic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="true"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/holo_red_dark" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/background_light">

                    <TextView
                        android:id="@+id/lbPoucanca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sPoupanca"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtPoupanca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="true"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/holo_red_dark" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
